using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class enemy_knight_movement : MonoBehaviour
{
    [Header("Hedef AyarlarÄ±")]
    public GameObject Player;
    
    [Header("Hareket AyarlarÄ±")]
    [SerializeField] private float speed = 3.5f; // HÄ±zÄ± biraz dÃ¼ÅŸÃ¼rdÃ¼m, daha tok dursun
    [SerializeField] private float chaseDistance = 10f;
    [SerializeField] private float stopDistance = 1.5f;

    [Header("SaldÄ±rÄ± AyarlarÄ±")]
    [SerializeField] private int damagePerHit = 10; 
    
    // Animasyon zamanlamalarÄ±
    [SerializeField] private float timeToFirstHit = 0.4f;  
    [SerializeField] private float timeToSecondHit = 0.5f; 
    [SerializeField] private float timeToThirdHit = 0.5f;  
    [SerializeField] private float animationEndDelay = 0.5f; 

    [Header("Yapay Zeka (AI) DoÄŸallÄ±k AyarlarÄ±")]
    [SerializeField] private float minWaitTime = 1.0f; // En az bekleme sÃ¼resi
    [SerializeField] private float maxWaitTime = 3.0f; // En fazla bekleme sÃ¼resi
    [Range(0, 100)] [SerializeField] private int defenseChance = 65; // Savunmaya geÃ§me ihtimali (%)

    // Durum DeÄŸiÅŸkenleri
    private float distance;
    private bool attack;
    private bool defend;
    private bool isDead = false;

    private Coroutine combatCoroutine;
    private Animator _animator;
    private SpriteRenderer _spriteRenderer; 
    private Rigidbody2D _rb;     
    private Collider2D _collider; 

    void Start()
    {
        _animator = GetComponent<Animator>();
        _spriteRenderer = GetComponent<SpriteRenderer>();
        _rb = GetComponent<Rigidbody2D>();
        _collider = GetComponent<Collider2D>();

        if (Player == null)
        {
            GameObject p = GameObject.FindGameObjectWithTag("Player");
            if (p != null) Player = p;
        }
    }

    void Update()
    {
        if (isDead) return;

        AIChase();
        UpdateAnimations();
    }

    public void ReceiveDamage(float amount)
    {
        if (isDead) return;
        
        if (Player != null && defend)
        {
            bool playerIsToTheRight = Player.transform.position.x > transform.position.x;
            bool facingRight = !_spriteRenderer.flipX;
            bool attackFromFront = (playerIsToTheRight && facingRight) || (!playerIsToTheRight && !facingRight);

            if (attackFromFront)
            {
                Debug.Log("ğŸ›¡ï¸ DÃ¼ÅŸman SaldÄ±rÄ±yÄ± BlokladÄ±!");
                // BloklandÄ±ÄŸÄ±nda belki biraz geri itilebilir (Knockback) eklenebilir.
                return; 
            }
        }

        health_system myHealth = GetComponent<health_system>();
        if (myHealth != null)
        {
            myHealth.TakeDamage(amount);
            
            // YENÄ°: Hasar alÄ±nca agresifleÅŸsin (Combat coroutine'i resetle)
            // EÄŸer savunmada deÄŸilse ve hasar aldÄ±ysa, hemen tepki vermesi iÃ§in combatÄ± yeniden baÅŸlatabiliriz.
            if (!defend && !attack) 
            {
                StopCombat();
                combatCoroutine = StartCoroutine(CombatPattern());
            }
        }
    }

    public void TriggerDeath()
    {
        if (isDead) return; 

        isDead = true;
        StopCombat();

        if (_rb != null)
        {
            _rb.velocity = Vector2.zero;
            _rb.isKinematic = true; 
        }

        if (_collider != null) _collider.enabled = false;
        if (_animator != null) _animator.SetBool("isDead", true);
    }

    private void AIChase()
    {
        if (isDead || Player == null) return;

        distance = Vector2.Distance(transform.position, Player.transform.position);

        if (distance >= chaseDistance)
        {
            StopCombat(); 
            _animator.SetFloat("speed", 0);
            return; 
        }

        // SaldÄ±rÄ± veya Savunma anÄ±nda dÃ¶nmesin, sadece boÅŸta veya yÃ¼rÃ¼rken dÃ¶nsÃ¼n
        if (!attack && !defend) 
        {
            FlipSprite();
        }

        if (distance > stopDistance)
        {
            // EÄŸer savunma yapÄ±yorsa yÃ¼rÃ¼mesin, savunmayÄ± bÄ±raksÄ±n sonra yÃ¼rÃ¼sÃ¼n
            if (defend) 
            {
                defend = false; // Oyuncu uzaklaÅŸtÄ±ysa savunmayÄ± bÄ±rakÄ±p kovalasÄ±n
            }

            if (!attack) // SaldÄ±rÄ±rken yÃ¼rÃ¼mesin (Kayma sorunu olmamasÄ± iÃ§in)
            {
                transform.position = Vector2.MoveTowards(transform.position, Player.transform.position, speed * Time.deltaTime);
                _animator.SetFloat("speed", speed);
            }
        }
        else 
        {
            _animator.SetFloat("speed", 0);
            if (combatCoroutine == null)
            {
                combatCoroutine = StartCoroutine(CombatPattern());
            }
        }
    }

    private void FlipSprite()
    {
        if (Player.transform.position.x > transform.position.x)
            _spriteRenderer.flipX = false;
        else
            _spriteRenderer.flipX = true;
    }

    // --- EN Ã–NEMLÄ° KISIM: DOÄAL SALDIRI DÃ–NGÃœSÃœ ---
    IEnumerator CombatPattern()
    {
        while (true) 
        {
            if (isDead) yield break;

            // 1. KARAR: SaldÄ±rÄ±ya baÅŸla
            attack = true;
            defend = false;

            // Rastgele saldÄ±rÄ± sayÄ±sÄ± belirle (1 ile 3 arasÄ±)
            // 1 gelirse sadece ilk vuruÅŸ, 2 gelirse iki vuruÅŸ, 3 gelirse full kombo
            int attackCount = Random.Range(1, 4); 

            // -- 1. VURUÅ --
            yield return new WaitForSeconds(timeToFirstHit);
            DealDamage();
            
            // EÄŸer saldÄ±rÄ± sayÄ±sÄ± 1'den bÃ¼yÃ¼kse devam et
            if (attackCount > 1 && !isDead)
            {
                yield return new WaitForSeconds(timeToSecondHit);
                DealDamage();
            }

            // EÄŸer saldÄ±rÄ± sayÄ±sÄ± 2'den bÃ¼yÃ¼kse devam et
            if (attackCount > 2 && !isDead)
            {
                yield return new WaitForSeconds(timeToThirdHit);
                DealDamage();
            }

            // Animasyonun bitmesini bekle
            yield return new WaitForSeconds(animationEndDelay);
            
            // SaldÄ±rÄ± bitti
            attack = false;

            // 2. KARAR: SÄ±rada ne yapacak? (Savunma mÄ±? Dinlenme mi?)
            // %65 ihtimalle savunma, %35 ihtimalle boÅŸ bekleme (aÃ§Ä±k verme)
            int roll = Random.Range(0, 100);

            if (roll < defenseChance)
            {
                // Savunma Modu
                defend = true;
            }
            else
            {
                // Agresif/Dikkatsiz Mod (Savunma aÃ§mÄ±yor, sadece bekliyor)
                defend = false;
            }

            // 3. KARAR: Ne kadar bekleyecek?
            // Her seferinde sabit 2 saniye deÄŸil, rastgele bir sÃ¼re (Ã¶rn: 1.2 sn ile 2.8 sn arasÄ±)
            float waitDuration = Random.Range(minWaitTime, maxWaitTime);
            
            yield return new WaitForSeconds(waitDuration);

            // DÃ¶ngÃ¼ baÅŸa dÃ¶ner...
        }
    }

    private void DealDamage()
    {
        if (isDead || Player == null) return;

        // VuruÅŸ anÄ±nda oyuncuya dÃ¶nÃ¼k olsun (Son dakika dÃ¼zeltmesi)
        FlipSprite(); 

        float actualDistance = Vector2.Distance(transform.position, Player.transform.position);

        if (actualDistance <= stopDistance + 1.2f)
        {
            player_health_system playerHealth = Player.GetComponent<player_health_system>();

            if (playerHealth != null)
            {
                playerHealth.TakeDamage(damagePerHit);
            }
        }
    }

    private void StopCombat()
    {
        if (combatCoroutine != null)
        {
            StopCoroutine(combatCoroutine);
            combatCoroutine = null;
        }
        attack = false;
        defend = false;
    }

    private void UpdateAnimations()
    {
        if (isDead) return;
        _animator.SetBool("attack", attack);
        _animator.SetBool("defend", defend);
    }

    private void OnDrawGizmosSelected()
    {
        Gizmos.color = Color.red;
        Gizmos.DrawWireSphere(transform.position, chaseDistance);
        Gizmos.color = Color.blue;
        Gizmos.DrawWireSphere(transform.position, stopDistance);
    }
}